utoipa-gen/tests/snapshots/schema_derive_test__const_generic_test.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "array_response": {
      "$ref": "#/components/schemas/ArrayResponse_String"
    }
  },
  "required": [
    "array_response"
  ],
  "type": "object"
}
