utoipa-gen/tests/snapshots/schema_derive_test__content_encoding_named_field.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: item
snapshot_kind: text
---
{
  "properties": {
    "picture": {
      "contentEncoding": "bas64",
      "type": "string"
    }
  },
  "required": [
    "picture"
  ],
  "type": "object"
}
