utoipa-gen/tests/snapshots/schema_derive_test__content_media_type_named_field.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: item
snapshot_kind: text
---
{
  "properties": {
    "doc": {
      "contentMediaType": "application/octet-stream",
      "type": "string"
    }
  },
  "required": [
    "doc"
  ],
  "type": "object"
}
