utoipa-gen/tests/snapshots/schema_derive_test__derive_btreeset.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: greeting
snapshot_kind: text
---
{
  "properties": {
    "values": {
      "items": {
        "type": "string"
      },
      "type": "array",
      "uniqueItems": true
    }
  },
  "required": [
    "values"
  ],
  "type": "object"
}
