utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_generic_types_having_path_expression.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: args
snapshot_kind: text
---
{
  "items": {
    "items": {
      "type": "string"
    },
    "type": "array"
  },
  "type": "array"
}
