utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_jiff_0_2_feature.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: "&doc"
---
{
  "properties": {
    "civil_date": {
      "format": "date",
      "type": "string"
    },
    "zoned": {
      "format": "date-time",
      "type": "string"
    }
  },
  "required": [
    "civil_date",
    "zoned"
  ],
  "type": "object"
}
