utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_linked_list.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: example_schema
snapshot_kind: text
---
{
  "properties": {
    "values": {
      "items": {
        "format": "double",
        "type": "number"
      },
      "type": "array"
    }
  },
  "required": [
    "values"
  ],
  "type": "object"
}
