utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_range_from.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: example_schema
---
{
  "properties": {
    "values": {
      "properties": {
        "start": {
          "format": "double",
          "type": "number"
        }
      },
      "required": [
        "start"
      ],
      "type": "object"
    }
  },
  "required": [
    "values"
  ],
  "type": "object"
}
