utoipa-gen/tests/snapshots/schema_derive_test__derive_component_with_range_full.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: example_schema
---
{
  "properties": {
    "values": {
      "default": null
    }
  },
  "required": [
    "values"
  ],
  "type": "object"
}
